--- a/faq.html
+++ b/faq.html
@@ -15,11 +15,11 @@
         <p>Amet porttitor eget dolor morbi non arcu risus quis varius. Montes nascetur ridiculus mus mauris. Odio euismod lacinia at quis. Porttitor eget dolor morbi non arcu. A condimentum vitae sapien pellentesque habitant morbi tristique. Malesuada nunc vel risus commodo viverra maecenas accumsan. Malesuada nunc vel risus commodo viverra maecenas. Egestas sed tempus urna et. Convallis tellus id interdum velit laoreet id donec ultrices. Mauris in aliquam sem fringilla. Pretium quam vulputate dignissim suspendisse in est. Proin nibh nisl condimentum id venenatis a.</p>
     <h2>Ask a Question</h2>
     
-        <from action="/action_page.php">
+        <form action="/action_page.php">
             <label for="Question">Question:</label><br>
             <input type="text" id="q"><br>
             <input type="submit" value="Submit">
-        </from>
+        </form>
         <script src="faq-script.js"></script>
 </body>
 </html>
