--- a/index.html
+++ b/index.html
@@ -4,32 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather</title>
+    <title>Sky-Pulse</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="side">
-        <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">FAQs</a>
-            <a href="#">Contact Me</a>
-        </div>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="faq.html">FAQs</a>
+        <a href="contact.html">Contact Me</a>
     </div>
-    <main id="show-login">
+    </div>
+    <main>
         <div class="top">
             <div id="weatherModal" class="modal">
                 <div class="modal-content">
                     <form id="form-1">
                         <label for="location">Location:</label><br>
-                        <input type="text" id="location" name="location" value="City, ST"><br>
-                        <input type="submit" id="get" value="Get Weather">
+                        <input type="text" id="location" name="location" value="lattitude, longitude"><br>
+                        <input type="submit" id="get" value="Get Weather">     
                     </form>
                 </div>
             </div>
-            <div id="myModal" class="modal">
+            <h1>Sky-Pulse</h1>
+            <div id="user-modal" class="modal">
                 <div class="modal-content">
-                    <form>
+                    <form id="user">
                         <label for="fname">Username:</label><br>
                         <input type="text" id="uname" name="user" value="Username"><br>
                         <label for="lname">Password:</label><br>
@@ -39,16 +40,13 @@
                 </div>
             </div>
         </div>
-        <div class="base">
-            <div class="card">Current Conditions</div>
-            <div class="card">Alerts</div>
-            <div class="card">24 Hour Forecast</div>
+        <div class="card">
         </div>
     </main>
 
 
 
-    <script src="home-script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
